# gitchangelogger

./: LICENSE  README.md  pyproject.toml
gitchangelog/: gitchangelog.py
